<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.fragment.MatrixAFragment">

    <GridView
        android:id="@+id/grid_view_matrix_a"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:stretchMode="columnWidth"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="?attr/actionBarSize"/>

    <TextView
        android:id="@+id/tv_rows"
        android:layout_width="75dp"
        android:layout_height="wrap_content"
        android:text="@string/rows"
        android:textSize="16sp"
        android:textColor="@color/black"
        android:layout_marginBottom="16dp"
        app:layout_constraintStart_toStartOf="@id/btn_clear"
        app:layout_constraintBottom_toTopOf="@id/btn_clear"
        app:layout_constraintEnd_toStartOf="@+id/spinner_rows"/>

    <Spinner
        android:id="@+id/spinner_rows"
        android:layout_width="75dp"
        android:layout_height="wrap_content"
        android:spinnerMode="dialog"
        app:layout_constraintTop_toTopOf="@id/tv_rows"
        app:layout_constraintBottom_toBottomOf="@id/tv_rows"
        app:layout_constraintStart_toEndOf="@id/tv_rows"
        app:layout_constraintEnd_toEndOf="@id/btn_clear"/>

    <TextView
        android:id="@+id/tv_columns"
        android:layout_width="75dp"
        android:layout_height="wrap_content"
        android:text="@string/columns"
        android:textSize="16sp"
        android:textColor="@color/black"
        android:layout_marginBottom="16dp"
        app:layout_constraintStart_toStartOf="@id/btn_resize"
        app:layout_constraintBottom_toTopOf="@id/btn_resize"
        app:layout_constraintEnd_toStartOf="@+id/spinner_columns"/>

    <Spinner
        android:id="@+id/spinner_columns"
        android:layout_width="75dp"
        android:layout_height="wrap_content"
        android:spinnerMode="dialog"
        app:layout_constraintTop_toTopOf="@id/tv_columns"
        app:layout_constraintBottom_toBottomOf="@id/tv_columns"
        app:layout_constraintEnd_toEndOf="@id/btn_resize"
        app:layout_constraintStart_toEndOf="@+id/tv_columns"/>

    <Button
        android:id="@+id/btn_clear"
        android:layout_width="150dp"
        android:layout_height="35dp"
        android:text="@string/clear"
        android:background="@drawable/bg_btn"
        android:textColor="@color/colorAccent"
        android:layout_marginTop="2dp"
        android:layout_marginBottom="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btn_resize"/>

    <Button
        android:id="@+id/btn_resize"
        android:layout_width="150dp"
        android:layout_height="35dp"
        android:text="@string/resize"
        android:background="@drawable/bg_btn"
        android:textColor="@color/colorAccent"
        android:layout_marginTop="2dp"
        android:layout_marginBottom="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@id/btn_clear"/>

</androidx.constraintlayout.widget.ConstraintLayout>